@@ -1,3 +1,7 @@
+2011-09-06 Aurelien Degremont  <aurelien.degremont@cea.fr>
+	* Workaround module unloading issue when a node is router and
+	client (ticket #99).
+
 2011-08-31 Aurelien Degremont  <aurelien.degremont@cea.fr>
 	* Fix exception bug when loading a model file (ticket #100).
 
